--- a/indexENG.html
+++ b/indexENG.html
@@ -19,7 +19,7 @@
   <body>
     <div class="wrapper">
             <div class="headerindex">
-                SELL-SERVICE tel. (+48) 22 240 29 09
+                <img src="loga.png" id="logacss"><span id= "number">SPRZEDAŻ-SERWIS tel. (+48) 22 240 29 09 </span>
                     <div class="logo">
                         <span id= "logos"; style= "color: white;"></span><span id= "logos"; style= "color: black;"></span>
                     </div>
@@ -82,7 +82,7 @@
                 
                    <a href="blog.html"><img src="blank1.jpg"></a>
                     <div class= "contentindex1">
-                        DOPPIO CAFFE SERVICE is a Polish company specializing in the HoReCa industry and servicing 
+                        <span id= "bold">DOPPIO CAFFE SERVICE</span> is a Polish company specializing in the HoReCa industry and servicing 
                         coffee machines of such brands as Lavazza, Saeco, De'Longhi, Siemens, Miele, Krups, Bosch. 
                         We are also an importer of Italian coffees and Cutrera olive oil. We have been a distributor
                          of Italian Lavazza coffee and Miscela d'Oro coffee for over 10 years. We offer coffee beans, 
@@ -125,7 +125,7 @@
                                     <div class="position"><i class= "icon-gmail"></i></div>
                             </div>      
                 </div>
-
+                <img src="doppiologo.png" id="logacss">
             <div class="boxfooter">
                         <div class= "footer">
                                 Doppio Roman Płotkowski Company & copy 2024 Wszelkie prawa zastrzeżone.
