--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
                     <ol class="active">
                             <li><a href="pp.html">O kawie</a></li>
                             <li><a href="ps.html">Produkty</a></li>
-                            <li><a href="ps.html">Oliwa z oliwek</a></li>
                             <li><a href="mp.html">Serwis ekspresów</a></li>
                             <li><a href="blog.html">Kontakt</a></li>
                     </ol>
@@ -97,9 +96,8 @@ NASZYM CELEM jest kompleksowa obsługa Klienta w ramach świadczonych usług.
             </div>
 
             <div class="galeryindex">
-                <img src="o1.JPG" id="photoindex">
-                <img src="o2.jpg" id="photoindex">
-                <img src="o3.jpg" id="photoindex">
+                <img src="miscela_doro.jpg" id="photoindex">
+               
 
             </div>
 
@@ -124,7 +122,7 @@ NASZYM CELEM jest kompleksowa obsługa Klienta w ramach świadczonych usług.
                 
             <div class="boxfooter">
                         <div class="footer">
-                                Doppio Roman Płotkowski Company & copy 2024 Wszelkie prawa zastrzeżone.
+                                Balbina Surma & copy 2024 Wszelkie prawa zastrzeżone.
                         </div>
            </div>
             <script src= "jquery-3.6.0.min.js"></script>
