--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <div class="wrapper">
             <div class="headerindex">
-                <div class="logodoppio"><img src="logoc.png" style="padding-bottom: 7px;" id="x"> SPRZEDAŻ -  tel. (+48) 22 240 29 09
+                <div class="logodoppio"><img src="logoc.png" style="padding-bottom: 7px;" id="x">
                     
                     
                 </div>
