--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
             <div class= "nav">
                     <ol class="active">
-                            <li><a href="pp.html">Oliva z oliwek</a></li>
-                            <li><a href="ps.html">Właściwości</a></li>
+                            <li><a href="pp.html">Właściwości oliwy</a></li>
+                            <li><a href="ps.html">Produkcja</a></li>
                             <li><a href="blog.html">Dystrybutor</a></li>
                     </ol>
 
