--- a/indexprodukcja.html
+++ b/indexprodukcja.html
@@ -36,7 +36,7 @@
                     <ol class="active">
                             <li><a href="pp.html">Właściwości oliwy</a></li>
                             <li><a href="ps.html">Produkcja</a></li>
-                            <li><a href="indexdystrybutor.html">Dystrybutor</a></li>
+                            <li><a href="blog.html">Dystrybutor</a></li>
                     </ol>
 
           </div>
@@ -83,9 +83,13 @@
                          które zdobyła dzięki swojej jakości wytworów.
                         
                         Od wielu już lat rodzina Cutrera własnoręcznie uprawia drzewa oliwne, 
-                        dzięki czemu uzyskują tak doskonałą jakość oferowanych olejów z oliwek. Pasja Rodziny Cutrera pielęgnowana przez dziesięciolecia zaowocowała
-                        niesamowitym smakiem i jakością oliwy. Wszystkie etapy produkcji wykonywane
-                         są ręcznie z należytą skrupulatnością tak aby owoce nie zostały uszkodzone podczas zbiorów.
+                        dzięki czemu uzyskują tak doskonałą jakość oferowanych olejów z oliwek. 
+                        Pasja Rodziny Cutrera pielęgnowana przez dziesięciolecia zaowocowała
+                         niesamowitym smakiem i jakością oliwy. Wszystkie etapy produkcji wykonywane
+                          są ręcznie z należytą skrupulatnością tak aby owoce nie zostały uszkodzone podczas zbiorów.Geneza firmy sięga początków XX wieku, 
+                         roku 1906, kiedy to w okolicach małego miasteczka w Sycylii południowo-wschodniej 
+                         powstała pierwsza uprawa tej niezwykłej odmiany oliwy z oliwek. 
+                         Obecnie cała plantacja gajów oliwnych, na których produkuje się olej z oliwek zajmuje ponad 50 hektarów.
                       <button class="translate">
                         <a href="indexEng.html">Translate</a>
                         </button>
@@ -98,33 +102,9 @@
             </div>
 
             <div class="galeryindex">
-                <img src="o4.jpg" id="photoindex">
                 <img src="o1.JPG" id="photoindex">
-                <img src="o6.jpg" id="photoindex">
-            </div>
-
-            <div class="boxindex1">
-                <div class= "contentindex1">
-                    Od wielu już lat rodzina Cutrera własnoręcznie uprawia drzewa oliwne, 
-                    dzięki czemu uzyskują tak doskonałą jakość oferowanych olejów z oliwek. 
-                    Geneza firmy sięga początków XX wieku, 
-                     roku 1906, kiedy to w okolicach małego miasteczka w Sycylii południowo-wschodniej 
-                     powstała pierwsza uprawa tej niezwykłej odmiany oliwy z oliwek. 
-                     Obecnie cała plantacja gajów oliwnych, na których produkuje się olej z oliwek zajmuje ponad 50 hektarów.
-                  <button class="translate">
-                    <a href="indexEng.html">Translate</a>
-                    </button>
-                        <div class= "arrow"><a href="index.html">
-                          <span></span>
-                          <span></span>
-                          <span></span>
-                        </div></a>
-                </div>
-        </div>
-
-            <div class="galeryindex">
+                
                 <img src="o3.jpg" id="photoindex">
-                <img src="o2.jpg" id="photoindex">
            </div>
 
             <!--div class="galeryindex1">
